src/tests/code/fail/fail_higherorder_function_type_mismatch.u
apply : ( func:(i64)->(i64), v:i64 )->( i64{func(v)} )

broken: ( x:f64 )->( i64{x} )

entrypoint:~()
{
	apply(broken, 42);
}
->(i64{1})